Training minutes can now be saved via lambda
